AAC-561 - V2 Hearings page (#970)
* Add in hearings call and begin page construction

* Fix remaining page for v2

* fix broken env var calls

* Hearings v2 requests tests

* Add show basic tests

* linter fixes

* Update testing around attendees partial

* Update tests around court_applications

* Test cleanup and feature test for hearing page

* Fix linting issues

* Use correct shared_time

* Add error handling around v2

--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -6,9 +6,15 @@
 
 .govuk-grid-row
   .govuk-grid-column-one-third
-    = render partial: 'details', locals: { hearing: @hearing, hearing_day: @hearing_day }
+    - unless Feature.enabled?(:hearing_data)
+      = render partial: 'details', locals: { hearing: @hearing, hearing_day: @hearing_day }
+    - else
+      = render partial: 'details_v2', locals: { hearing: @hearing, hearing_day: @hearing_day }
 
-    = render partial: 'attendees', locals: { hearing: @hearing }
+    - unless Feature.enabled?(:hearing_data)
+      = render partial: 'attendees', locals: { hearing: @hearing }
+    - else
+      = render partial: 'attendees_v2', locals: { hearing: @hearing }
 
   .govuk-grid-column-two-thirds
     - unless Feature.enabled?(:hearing_events)
@@ -18,10 +24,19 @@
       - if @hearing_events
         = render partial: 'hearing_events_v2', locals: { hearing_events: @hearing_events, hearing_day: @hearing_day }
 
-    - if @hearing.cracked_ineffective_trial
-      = render partial: 'hearing_result', locals: { hearing: @hearing }
-
-    = render partial: 'court_applications', locals: { hearing: @hearing }
+    - unless Feature.enabled?(:hearing_data)
+      - if @hearing.cracked_ineffective_trial
+        = render partial: 'hearing_result', locals: { hearing: @hearing }
+    - else
+      - if @hearing.hearing.cracked_ineffective_trial.description
+        = render partial: 'hearing_result_v2', locals: { hearing: @hearing }
+    - unless Feature.enabled?(:hearing_data)
+      = render partial: 'court_applications', locals: { hearing: @hearing }
+    - else
+      = render partial: 'court_applications_v2', locals: { hearing: @hearing }
 
 - if Rails.configuration.x.display_raw_responses
-  = render partial: 'raw_response', locals: { hearing: @hearing }
+  - unless Feature.enabled?(:hearing_data)
+    = render partial: 'raw_response', locals: { hearing: @hearing }
+  - else
+    = render partial: 'raw_response_v2', locals: { hearing: @hearing, hearing_events: @hearing_events}
