--- a/app/views/defendants/_offences_v2.html.haml
+++ b/app/views/defendants/_offences_v2.html.haml
@@ -20,5 +20,5 @@
           = offence.plea_list
         %td.govuk-table__cell
           = "#{offence.mode_of_trial}:"
-          %br
-          = offence.mode_of_trial_reason_list
+          -#%br
+          -#= offence.mode_of_trial_reason_list
