--- a/app/views/prosecution_cases/cd_api/_overall_defendants.html.haml
+++ b/app/views/prosecution_cases/cd_api/_overall_defendants.html.haml
@@ -9,11 +9,11 @@
       %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.date_of_birth')
       %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.maat_number')
   %tbody.govuk-table__body
-    - prosecution_case.defendants.each do |defendant|
+    - case_summary.defendants.each do |overall_defendant|
       %tr.govuk-table__row
         %td.govuk-table__cell
-          = link_to defendant.name, defendant_link_path(defendant, prosecution_case.prosecution_case_reference), class: 'govuk-link'
+          = link_to overall_defendant.name, defendant_link_path(overall_defendant, case_summary.prosecution_case_reference), class: 'govuk-link'
         %td.govuk-table__cell
-          = l(defendant.date_of_birth&.to_date)
+          = l(overall_defendant.date_of_birth&.to_date)
         %td.govuk-table__cell
-          = defendant.maat_reference || t('search.result.defendant.unlinked')
+          = overall_defendant.maat_reference || t('search.result.defendant.unlinked')
