--- a/app/views/prosecution_cases/cd_api/_show_v2.html.haml
+++ b/app/views/prosecution_cases/cd_api/_show_v2.html.haml
@@ -1,8 +1,8 @@
 .govuk-grid-row
   .govuk-grid-column-two-thirds
-    = render partial: 'prosecution_cases/cd_api/overall_defendants', locals: { prosecution_case: @prosecution_case }
+    = render partial: 'prosecution_cases/cd_api/overall_defendants', locals: { case_summary: case_summary }
 
-    = render partial: 'prosecution_cases/cd_api/hearing_summaries', locals: { prosecution_case: @prosecution_case }
+    = render partial: 'prosecution_cases/cd_api/hearing_summaries', locals: { case_summary: case_summary }
 
     - if Rails.configuration.x.display_raw_responses
-      = render partial: 'prosecution_cases/cd_api/raw_response', locals: { prosecution_case: @prosecution_case }
+      = render partial: 'prosecution_cases/cd_api/raw_response', locals: { case_summary: case_summary }
