Add date to table

--- a/app/views/hearings/_hearing_result_v2.html.haml
+++ b/app/views/hearings/_hearing_result_v2.html.haml
@@ -1,5 +1,5 @@
 %div{:class => "govuk-!-margin-bottom-9"}
-	.govuk-heading-s
+	.govuk-heading-l
 		= t('hearings.show.result')
 	%p.govuk-body
 		= hearing.hearing.cracked_ineffective_trial.description
