Fixed spelling issue in hearing raw response Added new lines back in yaml files

--- a/app/views/hearings/_raw_response_v2.html.haml
+++ b/app/views/hearings/_raw_response_v2.html.haml
@@ -1,6 +1,6 @@
 %div{ class: 'govuk-!-padding-bottom-4' }
 = govuk_detail(t('generic.view_raw_data')) do
-  %h3='Hearing Summarie'
+  %h3='Hearing Summaries'
   %pre
     = JSON.pretty_generate(hearing_summary.as_json)
   %h3='Hearing'
