Aac 560 integrate cdapi hearingsummaries paginator (#984)
* Ported over code from Prosecution Page Needed for this PR
Ported over logic added to application helper to use cd_api folder for prosecution case decorator
Ported over new versions of decorator for hearing_summary, prosecution_case and hearing_day
Added Active Resource model for prosecution case
Added start for hearing_controller logic to use ProsecutionCase object formed from hearingsummaries call

* Paginator Logic + Refactoring

Refactored Decorators so that they no longer use cd_api folder - this is because the Prosecution Case page and the Hearing page share decorators, if we want to feature flag effectively, we cannot have the CDAPI decorators split into a different folder

Added HearingSummary API call as CaseSummary model (this is to reduce confusion as HearingSummary also contains summarising data of the whole case)

Added decorators for Case Summary, Hearing_Summary, Overall_Defendant, Hearing_day and made modifications to Hearing decorator to handle extra logic needed from CD API with HearingSummaries call

Added Authorization code for being able to create a new CaseSummary search (from HearingSummaries API), captured this call into a service so that we can treat the search more like a class instantiation

Added logging and some error handling (may need to add more)

Unified :hearing_data and :hearing_events flags into one flag with rest of changes to

* Updated feature flags needed for spec tests

* Fixed existing tests

Added webmock stubs for hearing summary (for hearing page)
Added extra request tests for hearing summary in hearing page
Fixed existing request and feature tests

* Renamed v2 hearing sorting function to prevent identical function

* Modified paginator to use v2 of sorting function
Updated show_v2 hearing view test (removed usage of double as no longer
needed, used stub instead)

* Added model testing for CaseSummary

* Rebase with master and 

--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -6,37 +6,37 @@
 
 .govuk-grid-row
   .govuk-grid-column-one-third
-    - unless Feature.enabled?(:hearing_data)
+    - unless Feature.enabled?(:hearing)
       = render partial: 'details', locals: { hearing: @hearing, hearing_day: @hearing_day }
     - else
       = render partial: 'details_v2', locals: { hearing: @hearing, hearing_day: @hearing_day }
 
-    - unless Feature.enabled?(:hearing_data)
+    - unless Feature.enabled?(:hearing)
       = render partial: 'attendees', locals: { hearing: @hearing }
     - else
       = render partial: 'attendees_v2', locals: { hearing: @hearing }
 
   .govuk-grid-column-two-thirds
-    - unless Feature.enabled?(:hearing_events)
+    - unless Feature.enabled?(:hearing)
       - if @hearing.hearing_events
         = render partial: 'hearing_events', locals: { hearing: @hearing, hearing_day: @hearing_day }
     - else
       - if @hearing_events
         = render partial: 'hearing_events_v2', locals: { hearing_events: @hearing_events, hearing_day: @hearing_day }
 
-    - unless Feature.enabled?(:hearing_data)
+    - unless Feature.enabled?(:hearing)
       - if @hearing.cracked_ineffective_trial
         = render partial: 'hearing_result', locals: { hearing: @hearing }
     - else
       - if @hearing.hearing.cracked_ineffective_trial.description
         = render partial: 'hearing_result_v2', locals: { hearing: @hearing }
-    - unless Feature.enabled?(:hearing_data)
+    - unless Feature.enabled?(:hearing)
       = render partial: 'court_applications', locals: { hearing: @hearing }
     - else
       = render partial: 'court_applications_v2', locals: { hearing: @hearing }
 
 - if Rails.configuration.x.display_raw_responses
-  - unless Feature.enabled?(:hearing_data)
+  - unless Feature.enabled?(:hearing)
     = render partial: 'raw_response', locals: { hearing: @hearing }
   - else
-    = render partial: 'raw_response_v2', locals: { hearing: @hearing, hearing_events: @hearing_events}
+    = render partial: 'raw_response_v2', locals: { hearing_summary: @prosecution_case.hearing_summaries, hearing: @hearing, hearing_events: @hearing_events}
