--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -3,7 +3,7 @@
 
   = render 'defendants/defendant'
 
-  - if Feature.enabled?(:defendants_search)
+  - if Feature.enabled?(:defendants_page)
     = render 'defendants/offences_v2'
   - else
     = render 'defendants/offences'
