--- a/app/views/hearings/_hearing_result_v2.html.haml
+++ b/app/views/hearings/_hearing_result_v2.html.haml
@@ -2,4 +2,4 @@
 	.govuk-heading-l
 		= t('hearings.show.result')
 	%p.govuk-body
-		= hearing.cracked_ineffective_trial.description_sentence
+		= sanitize(hearing.cracked_ineffective_trial.description_sentence)
