--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -7,14 +7,15 @@
 .govuk-grid-row
   .govuk-grid-column-one-third
     - unless Feature.enabled?(:hearing)
-      = render partial: 'details', locals: { hearing: @hearing, hearing_day: @hearing_day }
+      = render partial: 'details', locals: { hearing: @hearing.hearing, hearing_day: @hearing_day }
     - else
-      = render partial: 'details_v2', locals: { hearing: @hearing, hearing_day: @hearing_day }
+      = render partial: 'details_v2', locals: { hearing_summary: @prosecution_case.hearing_summaries[@page.to_i],
+                                                        hearing_day: @hearing_day }
 
     - unless Feature.enabled?(:hearing)
       = render partial: 'attendees', locals: { hearing: @hearing }
     - else
-      = render partial: 'attendees_v2', locals: { hearing: @hearing }
+      = render partial: 'attendees_v2', locals: { hearing: @hearing.try(:hearing) }
 
   .govuk-grid-column-two-thirds
     - unless Feature.enabled?(:hearing)
@@ -28,12 +29,12 @@
       - if @hearing.cracked_ineffective_trial
         = render partial: 'hearing_result', locals: { hearing: @hearing }
     - else
-      - if @hearing.hearing.cracked_ineffective_trial.description
-        = render partial: 'hearing_result_v2', locals: { hearing: @hearing }
+      - if @hearing.try(:hearing).try(:cracked_ineffective_trial).try(:description)
+        = render partial: 'hearing_result_v2', locals: { hearing: @hearing.hearing }
     - unless Feature.enabled?(:hearing)
       = render partial: 'court_applications', locals: { hearing: @hearing }
     - else
-      = render partial: 'court_applications_v2', locals: { hearing: @hearing }
+      = render partial: 'court_applications_v2', locals: { hearing: @hearing.try(:hearing) }
 
 - if Rails.configuration.x.display_raw_responses
   - unless Feature.enabled?(:hearing)
