Add tests for cookie page

--- a/app/views/cookies/new.html.haml
+++ b/app/views/cookies/new.html.haml
@@ -4,7 +4,8 @@
 
 %p.govuk-body= t('cookie_settings.section_intro.paragraph_two')
 
-%h2.govuk-heading-l= t('cookie_settings.section_necessary.heading')
+%h2.govuk-heading-l{ "data-cy" => "necessary-cookies" }
+  = t('cookie_settings.section_necessary.heading')
 
 %p.govuk-body= t('cookie_settings.section_necessary.paragraph_one')
 
@@ -15,7 +16,9 @@
 %p.govuk-body= t('cookie_settings.section_necessary.paragraph_two')
 
 %p.govuk-body
-  = link_to t('cookie_settings.section_necessary.link_to_cookie_page'), cookies_path, class: 'govuk-link'
+  = link_to t('cookie_settings.section_necessary.link_to_cookie_page'), cookies_path,
+                                                                        class: 'govuk-link',
+                                                                        "data-cy" => "cookie-hyperlink"
 
 .app-no-js-only
   %h2.govuk-heading-l= t('cookie_settings.section_settings.heading_no_js')
