--- a/app/views/layouts/_cookie_banner.html.haml
+++ b/app/views/layouts/_cookie_banner.html.haml
@@ -17,7 +17,7 @@
             value: 'accept', 'data-accept-cookies': 'true', 'data-module': 'govuk-button'
           = button_to t('layouts.application.cookies.reject_cookies'), test_path, method: :get, class: 'govuk-button', name: 'cookies', 
             value: 'reject', 'data-reject-cookies': 'true', 'data-module': 'govuk-button'
-          = link_to t('layouts.application.cookies.cookie_settings'), cookies_settings_path, class: 'govuk-link'
+          = link_to t('layouts.application.cookies.cookie_settings'), cookies_settings_path, class: 'govuk-link', data: { turbo: false }
 
         .govuk-button-group.app-no-js-only
           %a.govuk-button{'data-reject-cookies': 'true', 'data-module': 'govuk-button', name: 'cookies', type: 'button', value: 'reject',
