--- a/app/views/layouts/_something.html.haml
+++ b/app/views/layouts/_something.html.haml
@@ -8,7 +8,8 @@
               %p.govuk-body
                 = @analytics_cookies_accepted ? t('layouts.application.cookies.confirmation_accept') : t('layouts.application.cookies.confirmation_reject') 
                 = t('layouts.application.cookies.confirmation_link_to_settings_html', href: cookies_settings_path).html_safe
+
             .govuk-button-group
-              %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': '?'}
-                = t('layouts.application.cookies.hide_message')
-  %turbo-stream{:action => "replace", :target => "removable"}
+              = link_to t('layouts.application.cookies.hide_message'), request.referrer , class: 'govuk-button', 'data-module': 'govuk-button', draggable: 'false'
+
+    %turbo-stream{:action => "replace", :target => "removable"}
