Set default cookies in before action
Add the before action usage in the application controller for :set_default_cookies,
which adds the default analytic cookies of false and displays the cookie banner
or does nothing and does not show the cookie banner

Add hide_banner in the cookie_concern as param to turbolinks remove the banner

--- a/app/views/layouts/_something.html.haml
+++ b/app/views/layouts/_something.html.haml
@@ -10,6 +10,7 @@
                 = t('layouts.application.cookies.confirmation_link_to_settings_html', href: cookies_settings_path).html_safe
 
             .govuk-button-group
-              = link_to t('layouts.application.cookies.hide_message'), request.referrer , class: 'govuk-button', 'data-module': 'govuk-button', draggable: 'false'
+              %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': test_path(hide_banner: true)}
+                = t('layouts.application.cookies.hide_message')
 
     %turbo-stream{:action => "replace", :target => "removable"}
