--- a/app/views/hearings/_raw_response.html.haml
+++ b/app/views/hearings/_raw_response.html.haml
@@ -22,4 +22,4 @@
           = JSON.pretty_generate(respondent.attributes)
   %h3= "Hearing events"
   %pre
-    = JSON.pretty_generate(hearing&.hearing_events&.map(&:attributes)'
+    = JSON.pretty_generate(hearing&.hearing_events&.map(&:attributes)
