--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
     %a.govuk-skip-link{href: "#main-content","data-module":"govuk-skip-link"}
       = t('layouts.application.skip_content')
 
-    = render partial: 'layouts/cookie_banner'
+    = render partial: 'layouts/cookie_banner/main'
 
     %header.govuk-header{"data-module" => "govuk-header", role: "banner" }
       .govuk-header__container.govuk-width-container
