--- a/app/views/layouts/cookie_banner/_main.html.haml
+++ b/app/views/layouts/cookie_banner/_main.html.haml
@@ -13,10 +13,8 @@
                 = t('layouts.application.cookies.analytics_cookies')
 
         .govuk-button-group.app-js-only
-          = button_to t('layouts.application.cookies.accept_cookies'), test_path, method: :get, class: 'govuk-button', name: 'cookies',
-            value: 'accept', 'data-accept-cookies': 'true', 'data-module': 'govuk-button'
-          = button_to t('layouts.application.cookies.reject_cookies'), test_path, method: :get, class: 'govuk-button', name: 'cookies', 
-            value: 'reject', 'data-reject-cookies': 'true', 'data-module': 'govuk-button'
+          = link_to t('layouts.application.cookies.accept_cookies'), update_cookies_path(cookies_preference: true), class: 'govuk-button', 'data-accept-cookies': 'true', 'data-module': 'govuk-button'
+          = link_to t('layouts.application.cookies.reject_cookies'), update_cookies_path(cookies_preference: false), class: 'govuk-button', 'data-reject-cookies': 'true', 'data-module': 'govuk-button'
           = link_to t('layouts.application.cookies.cookie_settings'), cookies_settings_path, class: 'govuk-link', data: { turbo: false }
 
         .govuk-button-group.app-no-js-only
