--- a/app/views/layouts/cookie_banner/_success.html.haml
+++ b/app/views/layouts/cookie_banner/_success.html.haml
@@ -10,7 +10,7 @@
                 = t('layouts.application.cookies.confirmation_link_to_settings_html', href: cookies_settings_path).html_safe
 
             .govuk-button-group
-              %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': test_path(hide_banner: true)}
+              %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': update_cookies_path(hide_banner: true)}
                 = t('layouts.application.cookies.hide_message')
 
     %turbo-stream{:action => "replace", :target => "removable"}
