Add data-turbo = false to fix flashes failure
Flashes were not appearing after successfully signing in or unsuccessfully.

This was because Devise and Turbolinks don't exactly work well together.

Therefore add a data-attribute of data-turbo to all the submit buttons related to Devise and user related features.
Set it to false, to prevent turbolinks from intercepting the call.

--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -15,6 +15,6 @@
     label: { text: 'Confirm new password' },
     autocomplete: 'new-password')
 
-  = f.govuk_submit(t('devise.passwords.user.form.change.submit'))
+  = f.govuk_submit(t('devise.passwords.user.form.change.submit'), 'data-turbo': 'false')
 
 = render "devise/shared/links"
