--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -24,4 +24,4 @@
       :titlecase,
       legend: { text: t('users.form.fields.roles_legend') }
 
-  = f.govuk_submit( t('users.form.fields.save_button') )
+  = f.govuk_submit( t('users.form.fields.save_button'), 'data-turbo': 'false' )
