--- a/app/views/layouts/cookie_banner/_main.html.haml
+++ b/app/views/layouts/cookie_banner/_main.html.haml
@@ -1,6 +1,6 @@
 - unless @cookies_preferences_set
   %turbo-frame#removable
-    .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{'aria-label': 'Cookies on View Court Data', id: "removable", role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''}}
+    .app-cookie-banner.govuk-cookie-banner{'aria-label': 'Cookies on View Court Data', id: "removable", role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''}}
       .govuk-cookie-banner__message.govuk-width-container
         .govuk-grid-row
           .govuk-grid-column-two-thirds
