Set ga cookies in turbolinks cookie banner
Set the google analytics cookies via the google_analytics javascript / view partial

Allow for instance variable or local partial variable on the google analytics view in case
the cookies were accepted on the banner or cookie_settings page

--- a/app/views/layouts/cookie_banner/_success.html.haml
+++ b/app/views/layouts/cookie_banner/_success.html.haml
@@ -12,5 +12,7 @@
             .govuk-button-group
               %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': update_cookies_path(hide_banner: true)}
                 = t('layouts.application.cookies.hide_message')
+    -# Script to add google analytics cookies
+    = render partial: 'layouts/google_analytics', analytics_cookies_accepted: true
 
     %turbo-stream{:action => "replace", :target => "removable"}
