--- a/app/views/layouts/_google_analytics.html.haml
+++ b/app/views/layouts/_google_analytics.html.haml
@@ -1,4 +1,5 @@
-- if @analytics_cookies_accepted
+- analytics_cookies_accepted = analytics_cookies_accepted if local_assigns[:analytics_cookies_accepted]
+- if @analytics_cookies_accepted || analytics_cookies_accepted
   :javascript
     let googleTrackingID = "#{ENV.fetch('GA_TRACKING_ID', nil)}"
 
