--- a/app/views/layouts/cookie_banner/_success.html.haml
+++ b/app/views/layouts/cookie_banner/_success.html.haml
@@ -9,7 +9,7 @@
               = t('layouts.application.cookies.confirmation_link_to_settings_html', href: cookies_settings_path).html_safe
 
           .govuk-button-group
-            %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': update_cookies_path(hide_banner: true)}
+            %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': update_cookies_path(hide_banner: true), 'data-cy': 'hide_message'}
               = t('layouts.application.cookies.hide_message')
   -# Script to add google analytics cookies
   = render partial: 'layouts/google_analytics', analytics_cookies_accepted: true
