Passed instance variables through to feedback form partial

--- a/app/views/feedback/new.html.haml
+++ b/app/views/feedback/new.html.haml
@@ -2,5 +2,5 @@
 
 .govuk-grid-row
 	.govuk-grid-column-two-thirds
-		= render 'form'
+		= render partial: 'form', locals: { feedback: @feedback }
 	
