Pass instance variable to search partials as locals

--- a/app/views/searches/_results.html.haml
+++ b/app/views/searches/_results.html.haml
@@ -1,6 +1,6 @@
 = render 'results_header'
 
-- if @results.empty?
+- if results.empty?
   = render 'results/none'
 - elsif @results.first.is_a? CourtDataAdaptor::Resource::ProsecutionCase
   = render 'results/prosecution_case'
