Pass instance variables to partials via locals (Search)

--- a/app/views/searches/_results.html.haml
+++ b/app/views/searches/_results.html.haml
@@ -1,4 +1,4 @@
-= render 'results_header'
+= render partial: 'results_header', locals: { term: term, dob: dob }
 
 - if results.empty?
   = render 'results/none'
