--- a/app/views/searches/_results_header.html.haml
+++ b/app/views/searches/_results_header.html.haml
@@ -1,5 +1,5 @@
 .govuk-heading-l
-  - if @dob
-    = t('search.result.heading_with_dob', term: @term, dob: l(@dob, format: :long))
+  - if dob
+    = t('search.result.heading_with_dob', term: term, dob: l(dob, format: :long))
   - else
-    = t('search.result.heading', term: @term)
+    = t('search.result.heading', term: term)
