Remove instance variables in partials (defendant page) Removed instane doubles in defendant, form, offences partials for v1 and v2 version of defendants/laa_references page haml files Fixed offences_v2 test To do: fix offences_v1 test

--- a/app/views/defendants/edit.html.haml
+++ b/app/views/defendants/edit.html.haml
@@ -5,4 +5,4 @@
     - content_for :custom_packs do
       = javascript_pack_tag 'unlink', defer: true
 
-    = render partial: 'defendants/form', locals: { defendant: @defendant, unlink_attempt: @unlink_attempt, prosecution_case_reference: @prosecution_case_reference }
+    = render partial: 'form', locals: { defendant: @defendant, unlink_attempt: @unlink_attempt, prosecution_case_reference: @prosecution_case_reference }
