--- a/app/views/defendants/_defendant.html.haml
+++ b/app/views/defendants/_defendant.html.haml
@@ -6,21 +6,21 @@
       %th.govuk-table__header{ scope: 'row' }
         = t('search.result.defendant.date_of_birth')
       %td.govuk-table__cell
-        = l(@defendant.date_of_birth&.to_date)
+        = l(defendant.date_of_birth&.to_date)
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
         = t('search.result.defendant.prosecution_case_reference')
       %td.govuk-table__cell
-        = @prosecution_case_reference
+        = prosecution_case_reference
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
         = t('search.result.defendant.national_insurance_number')
       %td.govuk-table__cell
-        = @defendant.national_insurance_number
+        = defendant.national_insurance_number
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
         = t('search.result.defendant.arrest_summons_number')
       %td.govuk-table__cell
-        = @defendant.arrest_summons_number
+        = defendant.arrest_summons_number
 
-= link_to 'View case', prosecution_case_path(@prosecution_case_reference), class: 'govuk-button govuk-button--secondary govuk-!-margin-bottom-9'
+= link_to 'View case', prosecution_case_path(prosecution_case_reference), class: 'govuk-button govuk-button--secondary govuk-!-margin-bottom-9'
