--- a/app/views/defendants/_form.html.haml
+++ b/app/views/defendants/_form.html.haml
@@ -1,12 +1,12 @@
 = form_with(model: unlink_attempt, url: defendant_path(defendant.id), method: 'patch') do |f|
   = f.govuk_error_summary
 
-  = render 'defendants/defendant', locals: { defendant: defendant, prosecution_case_reference: prosecution_case_reference }
+  = render partial: 'defendants/defendant', locals: { defendant: defendant, prosecution_case_reference: prosecution_case_reference }
 
   - if Feature.enabled?(:defendants_page)
-    = render 'defendants/offences_v2', locals: { defendant: defendant }
+    = render partial: 'defendants/offences_v2', locals: { defendant: defendant }
   - else
-    = render 'defendants/offences', locals: { defendant: defendant }
+    = render partial: 'defendants/offences', locals: { defendant: defendant }
 
   = hidden_field_tag(:urn, params[:urn])
 
