--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -1,12 +1,12 @@
-= form_with(model: @link_attempt, url: '/laa_references') do |f|
+= form_with(model: link_attempt, url: '/laa_references') do |f|
   = f.govuk_error_summary
 
-  = render 'defendants/defendant'
+  = render partial: 'defendants/defendant', locals: { defendant: @defendant, prosecution_case_reference: @prosecution_case_reference }
 
   - if Feature.enabled?(:defendants_page)
-    = render 'defendants/offences_v2'
+    = render partial: 'defendants/offences_v2', locals: { defendant: @defendant }
   - else
-    = render 'defendants/offences'
+    = render partial: 'defendants/offences', locals: { defendant: @defendant }
 
   = hidden_field_tag(:urn, params[:urn])
 
