--- a/app/views/laa_references/new.html.haml
+++ b/app/views/laa_references/new.html.haml
@@ -2,4 +2,4 @@
 
 .govuk-grid-row
 	.govuk-grid-column-two-thirds
-		= render 'form'
+		= render partial: 'form', locals: { link_attempt: @link_attempt }
