--- a/app/views/defendants/_form.html.haml
+++ b/app/views/defendants/_form.html.haml
@@ -1,7 +1,9 @@
 = form_with(model: unlink_attempt, url: defendant_path(defendant.id), method: 'patch') do |f|
   = f.govuk_error_summary
 
-  = render partial: 'defendants/defendant', locals: { defendant: defendant, prosecution_case_reference: prosecution_case_reference }
+  = render partial: 'defendants/defendant', 
+                    locals: { defendant: defendant,
+                    prosecution_case_reference: prosecution_case_reference }
 
   - if Feature.enabled?(:defendants_page)
     = render partial: 'defendants/offences_v2', locals: { defendant: defendant }
@@ -12,7 +14,7 @@
 
   = govuk_detail(t('defendants.unlink.detail'), open: unlink_attempt.errors.present?) do
     = f.govuk_collection_select :reason_code,
-      @unlink_reasons,
+      unlink_reasons,
       :code,
       :description,
       options: { include_blank: t('generic.form.select.blank_option') },
