--- a/app/views/laa_references/new.html.haml
+++ b/app/views/laa_references/new.html.haml
@@ -2,4 +2,7 @@
 
 .govuk-grid-row
 	.govuk-grid-column-two-thirds
-		= render partial: 'form', locals: { link_attempt: @link_attempt }
+		= render partial: 'form', locals: { link_attempt: @link_attempt,
+                                        defendant: @defendant,
+                                        defendant_uuid: @defendant_uuid,
+                                        prosecution_case_reference: @prosecution_case_reference }
