--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with model: @user do |f|
+= form_with model: user do |f|
   = f.govuk_error_summary
 
   = f.govuk_text_field(:first_name,
@@ -15,7 +15,7 @@
     label: { text: t('users.form.fields.email_label') } )
 
   = f.govuk_email_field(:email_confirmation,
-    value: @user.email,
+    value: user.email,
     label: { text: t('users.form.fields.email_confirmation_label') } )
 
   = f.govuk_collection_check_boxes :roles,
