Aac 703 fix haml linting instance variables (#1086)
* Remove Instance Variables violation from haml-lint_todo

* Pass instance variables from defendant edit to form partial

* Passed instance variables through to feedback form partial

* Pass instance variable to search partials as locals

* Pass instance variables to partials via locals (Search)

* Remove instance variables in partials (defendant page)
Removed instane doubles in defendant, form, offences partials for v1 and v2 version of defendants/laa_references page haml files
Fixed offences_v2 test
To do: fix offences_v1 test

* Fix test for offences haml file
Create subject for test as partial rendered in same way it is rendered in parent partial
Use subject defined in beginning of test instead of new renders as test object

* Fixed missed usages of instance variables in partials
Also changed formatting of code to reduce line length

* Fixed remainder of instance variable usages
Fixed instance variable usages in search_filters, searches and users views
Fixed whitespace issues from previous commits

* Fix linting issues from conflict resolving

* fix rubocop issues from changes to tests

--- a/app/views/laa_references/new.html.haml
+++ b/app/views/laa_references/new.html.haml
@@ -2,4 +2,7 @@
 
 .govuk-grid-row
   .govuk-grid-column-two-thirds
-    = render 'form'
+    = render partial: 'form', locals: { link_attempt: @link_attempt,
+                                        defendant: @defendant,
+                                        defendant_uuid: @defendant_uuid,
+                                        prosecution_case_reference: @prosecution_case_reference }
