--- a/app/views/feedback/new.html.haml
+++ b/app/views/feedback/new.html.haml
@@ -2,4 +2,4 @@
 
 .govuk-grid-row
   .govuk-grid-column-two-thirds
-    = render 'form'	
+    = render partial: 'form', locals: { feedback: @feedback }
