--- a/app/views/search_filters/new.html.haml
+++ b/app/views/search_filters/new.html.haml
@@ -1,3 +1,3 @@
 .govuk-grid-row
   .govuk-grid-column-two-thirds
-    = render 'form'
+    = render partial: 'form', locals: { search_filter: @search_filter }
