--- a/app/views/searches/_results.html.haml
+++ b/app/views/searches/_results.html.haml
@@ -1,6 +1,6 @@
-= render 'results_header'
+= render partial: 'results_header', locals: { term: term, dob: dob }
 
-- if @results.empty?
+- if results.empty?
   = render 'results/none'
 - elsif @results.first.is_a? CourtDataAdaptor::Resource::ProsecutionCase
   = render 'results/prosecution_case'
