--- a/app/views/searches/new.html.haml
+++ b/app/views/searches/new.html.haml
@@ -2,6 +2,9 @@
 
 .govuk-grid-row
   .govuk-grid-column-two-thirds
-    = render 'form'
-    = render 'error' if @error
-    = render 'results' if @results
+    = render partial: 'form', locals: { search: @search,
+                                        filter: @filter,
+                                        term: @term,
+                                        label: @label }
+    = render partial: 'error', locals: { error: @error } if @error
+    = render partial: 'results', locals: { results: @results, term: @term, dob: @dob } if @results
