--- a/app/views/devise/shared/_error_messages.html.haml
+++ b/app/views/devise/shared/_error_messages.html.haml
@@ -1,5 +1,5 @@
 - if resource.errors.any?
-  #error_explanation
+  #error-explanation
     %h2
       = I18n.t("errors.messages.not_saved",                 |
         count: resource.errors.count,                       |
