aac-706/HAML-linting-UnnecessaryStringOutput

--- a/app/views/defendants/_offences.html.haml
+++ b/app/views/defendants/_offences.html.haml
@@ -19,6 +19,6 @@
         %td.govuk-table__cell
           = offence.plea_list
         %td.govuk-table__cell
-          = "#{offence.mode_of_trial}:"
+          #{offence.mode_of_trial}:
           %br
           = offence.mode_of_trial_reason_list
