--- a/app/views/defendants/_offences_v2.html.haml
+++ b/app/views/defendants/_offences_v2.html.haml
@@ -22,4 +22,4 @@
         %td.govuk-table__cell
           = offence.plea_sentence
         %td.govuk-table__cell
-          = "#{offence.mode_of_trial}"
+          #{offence.mode_of_trial}
