--- a/app/views/defendants/_representation_orders.html.haml
+++ b/app/views/defendants/_representation_orders.html.haml
@@ -12,8 +12,8 @@
   %tbody.govuk-table__body
     %tr.govuk-table__row
       %td.govuk-table__cell
-        = 'todo'
+        todo
       %td.govuk-table__cell
-        = 'todo'
+        todo
       %td.govuk-table__cell
-        = 'todo'
+        todo
