--- a/app/views/prosecution_cases/cd_api/_raw_response.html.haml
+++ b/app/views/prosecution_cases/cd_api/_raw_response.html.haml
@@ -7,7 +7,7 @@
   %h3= 'Overall defendants'
   %pre
     - case_summary.overall_defendants.each.with_index do |defendant, idx|
-      %h4= "defendant #{idx}"
+      %h4 defendant #{idx}
       = JSON.pretty_generate(defendant.attributes)
 
   %h3= 'Hearing summaries'
@@ -18,11 +18,11 @@
 
   %h3= 'Hearing summaries'
   - case_summary.hearing_summaries.each.with_index do |hearing_summary, hidx|
-    %h4= "hearing summary #{hidx}"
+    %h4 hearing summary #{hidx}
     %pre
       = JSON.pretty_generate(JSON.parse(hearing_summary.attributes.to_json))
 
-    %h4= "Defence counsels for hearing summary #{hidx}"
+    %h4 Defence counsels for hearing summary #{hidx}
     = 'none' if hearing_summary.defence_counsels.blank?
     - Array(hearing_summary.defence_counsels).each.with_index do |event, pidx|
       %pre
