--- a/app/views/hearings/_raw_response.html.haml
+++ b/app/views/hearings/_raw_response.html.haml
@@ -7,15 +7,15 @@
   - hearing&.court_applications&.each.with_index do |court_application, caidx|
     %pre
       = JSON.pretty_generate(hearing&.court_applications&.map(&:attributes))
-      %h4= "Court application type for court application #{caidx}"
+      %h4 Court application type for court application #{caidx}
       %pre
         = JSON.pretty_generate(court_application.type&.attributes)
-      %h4= "Judicial results for court application #{caidx}"
+      %h4 Judicial results for court application #{caidx}
       = "none" if court_application.judicial_results.blank?
       - Array(court_application.judicial_results).each.with_index do |result, ridx|
         %pre
           = JSON.pretty_generate(result.attributes)
-      %h4= "Respondents for court application #{caidx}"
+      %h4 Respondents for court application #{caidx}
       = "none" if court_application.respondents.blank?
       - Array(court_application.respondents).each.with_index do |respondent, ridx|
         %pre
