Update the attendees view to use hearing.defence_counsel_list
Update the attendees view to call the defence_counsel_list on the hearing.hearing / hearing_details object to prepare the list of defence_counsels and their defendants

e.g.

John Smith (QC) for Jane Doe<br>John Smith (QC) for not available<br>Tom Jones (junior) for Micheal Jackson

--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -15,7 +15,7 @@
     - unless Feature.enabled?(:hearing)
       = render partial: 'attendees', locals: { hearing: @hearing }
     - else
-      = render partial: 'attendees_v2', locals: { hearing: @hearing.try(:hearing) }
+      = render partial: 'attendees_v2', locals: { hearing: @hearing, hearing_details: @hearing.try(:hearing) }
 
   .govuk-grid-column-two-thirds
     - unless Feature.enabled?(:hearing)
