--- a/app/views/hearings/_attendees_v2.html.haml
+++ b/app/views/hearings/_attendees_v2.html.haml
@@ -4,28 +4,28 @@
   .govuk-heading-s{ :class => "govuk-!-margin-bottom-1" }
     = t('hearings.show.attendees.defendants')
   %p.govuk-body{ :class => "govuk-!-margin-bottom-2", :id => "defendants" }
-    - unless hearing && hearing.prosecution_cases&.any?
+    - unless hearing_details && hearing_details.prosecution_cases&.any?
       = t('generic.not_available')
     - else
-      = safe_join(hearing.prosecution_cases.map { |cs| cs.defendants.map {|df| "#{df.defendant_details.person_details.first_name} #{df.defendant_details.person_details.last_name}"}}, tag.br)
+      = safe_join(hearing_details.prosecution_cases.map { |cs| cs.defendants.map {|df| "#{df.defendant_details.person_details.first_name} #{df.defendant_details.person_details.last_name}"}}, tag.br)
   .govuk-heading-s{ :class => "govuk-!-margin-bottom-1" }
     = t('hearings.show.attendees.defence')
   %p.govuk-body{ :class => "govuk-!-margin-bottom-2", :id => "defence" }
-    - unless hearing && hearing.defence_counsels&.any?
+    - unless hearing_details && hearing_details.defence_counsels&.any?
       = t('generic.not_available')
     - else
-      = safe_join(hearing.defence_counsels.map { |dc| "#{dc.first_name} #{dc.last_name} (#{dc.status})"}, tag.br)
+      = safe_join([hearing.defence_counsels_list], tag.br)
   .govuk-heading-s{ :class => "govuk-!-margin-bottom-1" }
     = t('hearings.show.attendees.prosecution')
   %p.govuk-body{ :class => "govuk-!-margin-bottom-2", :id => "prosecution" }
-    - unless hearing && hearing.prosecution_counsels&.any?
+    - unless hearing_details && hearing_details.prosecution_counsels&.any?
       = t('generic.not_available')
     - else
-      = safe_join(hearing.prosecution_counsels.map { |pc| "#{pc.first_name} #{pc.last_name}"}, tag.br)
+      = safe_join(hearing_details.prosecution_counsels.map { |pc| "#{pc.first_name} #{pc.last_name}"}, tag.br)
   .govuk-heading-s{ :class => "govuk-!-margin-bottom-1" }
     = t('hearings.show.attendees.judges')
   %p.govuk-body{ :class => "govuk-!-margin-bottom-2", :id => "judges" }
-    - unless hearing && hearing.judiciary&.any?
+    - unless hearing_details && hearing_details.judiciary&.any?
       = t('generic.not_available')
     - else
-      = safe_join(hearing.judiciary.map { |jd| "#{jd.title} #{jd.first_name} #{jd.last_name}"}, tag.br)
+      = safe_join(hearing_details.judiciary.map { |jd| "#{jd.title} #{jd.first_name} #{jd.last_name}"}, tag.br)
