--- a/app/views/hearings/_court_applications_v2.html.haml
+++ b/app/views/hearings/_court_applications_v2.html.haml
@@ -1,6 +1,7 @@
-- not_available = t('generic.not_available')
-- respondent_synonyms = t('hearings.show.court_applications.respondent_synonyms')
-- applicant_synonym = t('hearings.show.court_applications.applicant_synonym')
+:ruby
+  not_available = t('generic.not_available')
+  respondent_synonyms = t('hearings.show.court_applications.respondent_synonyms')
+  applicant_synonym = t('hearings.show.court_applications.applicant_synonym')
 
 %h2.govuk-heading-l{ :class => "govuk-!-margin-bottom-4" }
   = t('hearings.show.court_applications.heading')
